pgrx-unit-tests/tests/todo/composite-types-broken-on-spi.stderr
error[E0277]: `Vec<Option<pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>>` cannot be passed into a Postgres function as a Datum
  --> tests/todo/composite-types-broken-on-spi.rs:60:9
   |
58 |     #[pg_extern]
   |     ------------ in this attribute macro expansion
59 |     fn sum_scritches_for_names_strict_optional_items(
60 |         dogs: Vec<Option<pgrx::composite_type!("Dog")>>,
   |         ^^^^ the trait `ArgAbi<'_>` is not implemented for `Vec<Option<pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>>`
   |
help: the following other types implement trait `ArgAbi<'fcx>`
  --> $WORKSPACE/pgrx/src/callconv.rs
   |
   | / unsafe impl<'fcx, T> ArgAbi<'fcx> for Vec<T>
   | | where
   | |     for<'arr> T: UnboxDatum<As<'arr> = T> + FromDatum + 'arr,
   | |_____________________________________________________________^ `Vec<T>`
...
   | / unsafe impl<'fcx, T> ArgAbi<'fcx> for Vec<Option<T>>
   | | where
   | |     for<'arr> T: UnboxDatum<As<'arr> = T> + FromDatum + 'arr,
   | |_____________________________________________________________^ `Vec<Option<T>>`
...
   |           $(unsafe impl<$lt> ArgAbi<$lt> for $unboxable {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Vec<u8>`
...
   |   argue_from_datum! { 'fcx; i8, i16, i32, i64, f32, f64, bool, char, String, Vec<u8> }
   |   ------------------------------------------------------------------------------------ in this macro invocation
note: required by a bound in `pgrx::callconv::Args::<'a, 'fcx>::next_arg_unchecked`
  --> $WORKSPACE/pgrx/src/callconv.rs
   |
   |     pub unsafe fn next_arg_unchecked<T: ArgAbi<'fcx>>(&mut self) -> Option<T> {
   |                                         ^^^^^^^^^^^^ required by this bound in `Args::<'a, 'fcx>::next_arg_unchecked`
   = note: this error originates in the attribute macro `pg_extern` which comes from the expansion of the macro `argue_from_datum` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `Vec<Option<pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>>` cannot be passed into a Postgres function as a Datum
  --> tests/todo/composite-types-broken-on-spi.rs:77:9
   |
75 |     #[pg_extern]
   |     ------------ in this attribute macro expansion
76 |     fn sum_scritches_for_names_default_optional_items(
77 |         dogs: pgrx::default!(
   |         ^^^^ the trait `ArgAbi<'_>` is not implemented for `Vec<Option<pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>>`
   |
help: the following other types implement trait `ArgAbi<'fcx>`
  --> $WORKSPACE/pgrx/src/callconv.rs
   |
   | / unsafe impl<'fcx, T> ArgAbi<'fcx> for Vec<T>
   | | where
   | |     for<'arr> T: UnboxDatum<As<'arr> = T> + FromDatum + 'arr,
   | |_____________________________________________________________^ `Vec<T>`
...
   | / unsafe impl<'fcx, T> ArgAbi<'fcx> for Vec<Option<T>>
   | | where
   | |     for<'arr> T: UnboxDatum<As<'arr> = T> + FromDatum + 'arr,
   | |_____________________________________________________________^ `Vec<Option<T>>`
...
   |           $(unsafe impl<$lt> ArgAbi<$lt> for $unboxable {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Vec<u8>`
...
   |   argue_from_datum! { 'fcx; i8, i16, i32, i64, f32, f64, bool, char, String, Vec<u8> }
   |   ------------------------------------------------------------------------------------ in this macro invocation
note: required by a bound in `pgrx::callconv::Args::<'a, 'fcx>::next_arg_unchecked`
  --> $WORKSPACE/pgrx/src/callconv.rs
   |
   |     pub unsafe fn next_arg_unchecked<T: ArgAbi<'fcx>>(&mut self) -> Option<T> {
   |                                         ^^^^^^^^^^^^ required by this bound in `Args::<'a, 'fcx>::next_arg_unchecked`
   = note: this error originates in the attribute macro `pg_extern` which comes from the expansion of the macro `argue_from_datum` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `Vec<Option<pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>>` cannot be passed into a Postgres function as a Datum
  --> tests/todo/composite-types-broken-on-spi.rs:97:9
   |
95 |     #[pg_extern]
   |     ------------ in this attribute macro expansion
96 |     fn sum_scritches_for_names_optional_items(
97 |         dogs: Option<Vec<Option<pgrx::composite_type!("Dog")>>>,
   |         ^^^^ the trait `ArgAbi<'_>` is not implemented for `Vec<Option<pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>>`
   |
help: the following other types implement trait `ArgAbi<'fcx>`
  --> $WORKSPACE/pgrx/src/callconv.rs
   |
   | / unsafe impl<'fcx, T> ArgAbi<'fcx> for Vec<T>
   | | where
   | |     for<'arr> T: UnboxDatum<As<'arr> = T> + FromDatum + 'arr,
   | |_____________________________________________________________^ `Vec<T>`
...
   | / unsafe impl<'fcx, T> ArgAbi<'fcx> for Vec<Option<T>>
   | | where
   | |     for<'arr> T: UnboxDatum<As<'arr> = T> + FromDatum + 'arr,
   | |_____________________________________________________________^ `Vec<Option<T>>`
...
   |           $(unsafe impl<$lt> ArgAbi<$lt> for $unboxable {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Vec<u8>`
...
   |   argue_from_datum! { 'fcx; i8, i16, i32, i64, f32, f64, bool, char, String, Vec<u8> }
   |   ------------------------------------------------------------------------------------ in this macro invocation
   = note: required for `Option<Vec<Option<pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>>>` to implement `ArgAbi<'_>`
note: required by a bound in `pgrx::callconv::Args::<'a, 'fcx>::next_arg_unchecked`
  --> $WORKSPACE/pgrx/src/callconv.rs
   |
   |     pub unsafe fn next_arg_unchecked<T: ArgAbi<'fcx>>(&mut self) -> Option<T> {
   |                                         ^^^^^^^^^^^^ required by this bound in `Args::<'a, 'fcx>::next_arg_unchecked`
   = note: this error originates in the attribute macro `pg_extern` which comes from the expansion of the macro `argue_from_datum` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `pgrx::Array<'_, pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>` is not an iterator
   --> tests/todo/composite-types-broken-on-spi.rs:125:20
    |
125 |         for dog in dogs {
    |                    ^^^^ `pgrx::Array<'_, pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>` is not an iterator
    |
help: the trait `IntoIterator` is not implemented for `pgrx::Array<'_, pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>`
      but trait `IntoIterator` is implemented for it
   --> $WORKSPACE/pgrx/src/datum/array.rs
    |
    | / impl<'mcx, T> IntoIterator for Array<'mcx, T>
    | | where
    | |     for<'arr> T: UnboxDatum<As<'arr> = T> + 'static,
    | |____________________________________________________^

error[E0277]: `pgrx::Array<'_, pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>` is not an iterator
   --> tests/todo/composite-types-broken-on-spi.rs:145:20
    |
145 |         for dog in dogs {
    |                    ^^^^ `pgrx::Array<'_, pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>` is not an iterator
    |
help: the trait `IntoIterator` is not implemented for `pgrx::Array<'_, pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>`
      but trait `IntoIterator` is implemented for it
   --> $WORKSPACE/pgrx/src/datum/array.rs
    |
    | / impl<'mcx, T> IntoIterator for Array<'mcx, T>
    | | where
    | |     for<'arr> T: UnboxDatum<As<'arr> = T> + 'static,
    | |____________________________________________________^

error[E0277]: `pgrx::Array<'_, pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>` is not an iterator
   --> tests/todo/composite-types-broken-on-spi.rs:162:20
    |
162 |         for dog in dogs {
    |                    ^^^^ `pgrx::Array<'_, pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>` is not an iterator
    |
help: the trait `IntoIterator` is not implemented for `pgrx::Array<'_, pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>`
      but trait `IntoIterator` is implemented for it
   --> $WORKSPACE/pgrx/src/datum/array.rs
    |
    | / impl<'mcx, T> IntoIterator for Array<'mcx, T>
    | | where
    | |     for<'arr> T: UnboxDatum<As<'arr> = T> + 'static,
    | |____________________________________________________^

error[E0308]: mismatched types
  --> tests/todo/composite-types-broken-on-spi.rs:11:5
   |
11 |     #[pg_extern]
   |     ^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected struct `pgrx::prelude::PgHeapTuple<'arr, pgrx::AllocatedByRust>`
              found struct `pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>`
note: the lifetime requirement is introduced here
  --> $WORKSPACE/pgrx/src/callconv.rs
   |
   |     pub unsafe fn next_arg_unchecked<T: ArgAbi<'fcx>>(&mut self) -> Option<T> {
   |                                         ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `pg_extern` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/todo/composite-types-broken-on-spi.rs:28:5
   |
28 |     #[pg_extern]
   |     ^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected struct `pgrx::prelude::PgHeapTuple<'arr, pgrx::AllocatedByRust>`
              found struct `pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>`
note: the lifetime requirement is introduced here
  --> $WORKSPACE/pgrx/src/callconv.rs
   |
   |     pub unsafe fn next_arg_unchecked<T: ArgAbi<'fcx>>(&mut self) -> Option<T> {
   |                                         ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `pg_extern` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/todo/composite-types-broken-on-spi.rs:44:5
   |
44 |     #[pg_extern]
   |     ^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected struct `pgrx::prelude::PgHeapTuple<'arr, pgrx::AllocatedByRust>`
              found struct `pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>`
note: the lifetime requirement is introduced here
  --> $WORKSPACE/pgrx/src/callconv.rs
   |
   |     pub unsafe fn next_arg_unchecked<T: ArgAbi<'fcx>>(&mut self) -> Option<T> {
   |                                         ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `pg_extern` (in Nightly builds, run with -Z macro-backtrace for more info)
